# dss-plugin-rdf-tools

./: .gitignore  README.md  plugin.json
.github/workflows/: python-tests.yaml
code-env/python/spec/: requirements.txt
custom-recipes/id-dku-extract-rdf-files/: recipe.json  recipe.py
custom-recipes/id-dku-rdf-files-extractor/: recipe.json  recipe.py
python-connectors/dku-rdf-tools_dku-sparql-dataset/: connector.json  connector.py
python-connectors/dku-rdf-tools_dku-sparql-dataset/resource/: sparql_input.js
python-formats/dku-jsonld-format/: format.json  format.py
python-formats/dku-ntriples-file/: format.json  format.py
python-formats/dku-rdf-xml-format/: format.json  format.py
python-formats/dku-turtle-file/: format.json  format.py
python-formats/dku-turtle-format/: format.json  format.py
python-lib/dkurdftools/: format_extractor.py  pyproject.toml  rdf_format_extractor.py  sparql_parsing.py
python-lib/dkurdftools/formats/: format_extractor.py  output_formatter.py  utils.py
python-lib/dkurdftools/sparql/: connector.py  parsing.py
python-lib/dkurdftools/storage/: dss_store.py
python-lib/dkurdftools/tests/: test_format_utils.py
python-lib/dkurdftools/tests/sparql/: conftest.py  test_connector.py  test_parsing.py
resource/: sparql_input.js
resources/: sparql_input.html
